[package]
name = "rust_mlp"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_mlp"
path = "src/lib.rs"


[[bin]]
name = "rust_mlp"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
rand = "0.8.5"
