[package]
name = "puffpastry"
version = "0.1.0"
edition = "2021"

[lib]
name = "puffpastry"
path = "src/lib.rs"


[[bin]]
name = "puffpastry"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
rand = "0.8.5"
